Fix animations & empty images (#306)
* Move delay to move functions & fix last card animation

* Make reserved cards move after delay only

* Delay when noble moves

* Make card/deck invisible not removed when empty

* Fix issue with moving cards not ending in correct location

* Remove unnecessary attribute on nobles deck

* Fix cities and nobles updating on board

Will no longer just update the divs starting from the first element it can find, rather will do a delta update.
Removes the cards that are no longer on the board, but does not touch the others that are already present.

* Fix positioning of card move animation if not correct at end

--- a/client/src/styles/gameboard.css
+++ b/client/src/styles/gameboard.css
@@ -150,7 +150,8 @@ body {
   max-height: 100%;
   font-size: 2.5vmin;
   z-index: 3;
-  transition: font-size 0.01s;
+  /* this would make the transition to a smaller inventory smoother, but breaks card moving animations... */
+  /* transition: font-size 0.01s; */
 }
 
 .player-inventory.shrink {
@@ -570,11 +571,15 @@ body {
 
 .board-cards-row .board-cards-dev-deck[empty],
 .board-cards-row .board-cards-dev-deck-orient[empty] {
-  display: none;
+  visibility: hidden;
 }
 
-/* .board-cards-row .board-card-dev img:not([src]), */
-.board-nobles .noble-card img:not([src]) {
+.board-cards-row .board-card-dev:not([card-id]),
+.board-nobles .noble-card:not([card-id])[had-card] {
+  visibility: hidden;
+}
+
+.board-nobles .noble-card:not([card-id]):not([had-card]) {
   display: none;
 }
 
